# jinjanator-plugin-format-xml

./: README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-package.yml
changelog.d/: towncrier_template.md.jinja
