[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-fancy-pypi-readme",
  "hatch-vcs",
  "hatchling",
]

[project]
name = "jinjanator-plugin-format-xml"
description = "Plugin which provides XML format (data input) support for jinjanator"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dynamic = [
  "readme",
  "version",
]
dependencies = [
  "jinjanator-plugins==25.1.*",
  "xmltodict",
]
[[project.authors]]
name = "Kevin P. Fleming"
email = "jinjanator@kevin.km6g.us"
[project.entry-points]
jinjanator.format_xml = "jinjanator_plugin_format_xml.plugin"
[project.urls]
"Bug Tracker" = "https://github.com/kpfleming/jinjanator-plugin-format-xml/issues"
Homepage = "https://github.com/kpfleming/jinjanator-plugin-format-xml"

[tool.hatch]
[tool.hatch.build]
exclude = [
  "*~",
  ".github",
]
targets.sdist.include = [
  "src",
  "tests",
  "*.md",
]
targets.wheel.packages = [
  "src/jinjanator_plugin_format_xml",
]
[tool.hatch.envs]
changelog.skip-install = true
changelog.dependencies = [
  "towncrier",
]
changelog.scripts.draft = [
  "rm -f changelog.d/*~",
  "towncrier build --version main --draft",
]
changelog.scripts.release = [
  "rm -f changelog.d/*~",
  "towncrier build --yes --version {args}",
]
ci.dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-icdiff",
]
ci.matrix = [
  { python = [
    "3.9",
    "3.10",
    "3.11",
    "3.12",
    "3.13",
    "3.14",
  ] },
]
ci.scripts.ci = [
  "rm -f .coverage",
  "pytest --verbose --cov-append  --cov-branch --cov=jinjanator_plugin_format_xml",
  "coverage report --show-missing --fail-under=100",
]
default.python = "3.13"
default.installer = "uv"
default.python-sources = [
  "external",
]
lint.dependencies = [
  "ruff>=0.2.0",
  "mypy",
  "pyproject-fmt",
  "types-xmltodict",
]
lint.scripts.lint = [
  "ruff format",
  "ruff check --output-format=full --fix --show-fixes",
  "mypy --package jinjanator_plugin_format_xml",
  "mypy tests",
  "shellcheck workflow-support/*.sh",
  "pyproject-fmt pyproject.toml",
]
lint.scripts.lint-action = [
  "ruff format --check --diff",
  "ruff check --output-format=github",
  "mypy --package jinjanator_plugin_format_xml",
  "mypy tests",
  "shellcheck workflow-support/*.sh",
  "pyproject-fmt --check pyproject.toml",
]
[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.metadata.hooks]
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = """
# *jinjanator-plugin-format-xml*: Provides XML format (data input) support for jinjanator

"""
[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-after = "<!-- fancy-readme start -->"
end-before = "<!-- fancy-readme end -->"
[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = """
## Release Information
"""
[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG.md"
start-after = "<!-- towncrier release notes start -->"
pattern = "\n(###.+?\n)## "
[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = """
---
[→ Full Changelog](https://github.com/kpfleming/jinjanator-plugin-format-xml/blob/main/CHANGELOG.md)
"""

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = "\\[(.+?)\\]\\(((?!https?://)\\S+?)\\)"
replacement = "[\\1](https://github.com/kpfleming/jinjanator-plugin-format-xml/tree/main/\\g<2>)"
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = "#(\\d+)"
replacement = "[#\\1](https://github.com/kpfleming/jinjanator-plugin-format-xml/issues/\\1)"
[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100
src = [
  "src",
  "tests",
]
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "ANN",     # Mypy is better at this.
  "C901",    # Leave complexity to me.
  "COM812",  # conflicts with formatter
  "D",       # We have different ideas about docstrings.
  "FA100",   # Intentionally not using '__future__' for annotations
  "ISC001",  # conflicts with formatter
  "PLR0912", # Leave complexity to me.
  "TRY301",  # Raise in try blocks can totally make sense.
]
per-file-ignores."tests/*" = [
  "PLC1901", # empty strings are falsey, but are less specific in tests
  "PT005",   # we use always underscores and explicit names
  "S101",    # assert
  "SIM300",  # Yoda rocks in tests
]
unfixable = [
  "F401",
]
isort.lines-after-imports = 2
isort.lines-between-types = 1

[tool.pyproject-fmt]
max_supported_python = "3.14"
table_format = "long"

[tool.mypy]
python_version = "3.10"
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "normal"
no_implicit_optional = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest]
[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
testpaths = [
  "tests",
]
addopts = [
  "-ra",
  "--strict-markers",
]

[tool.towncrier]
name = "jinjanator-plugin-format-xml"
package = "jinjanator_plugin_format_xml"
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
template = "changelog.d/towncrier_template.md.jinja"
title_format = ""
issue_format = "[#{issue}](https://github.com/kpfleming/jinjanator-plugin-format-xml/issues/{issue})"
underlines = [
  "",
  "",
  "",
]
section = [ { path = "" } ]
type = [
  { directory = "breaking", name = "Backwards-incompatible Changes", showcontent = true },
  { directory = "deprecating", name = "Deprecations", showcontent = true },
  { directory = "adding", name = "Additions", showcontent = true },
  { directory = "changing", name = "Changes", showcontent = true },
  { directory = "fixing", name = "Fixes", showcontent = true },
]
